--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 
 <h1>The Deva Store</h1>
-<p>เว็บซื้อขายไอดีอันดับ 1 ของโลก เชื่อถือได้ 100% ไม่มีโกง.</p>
+    <p>เว็บซื้อขายไอดีอันดับ 1 ของโลก เชื่อถือได้ 100% ไม่มีโกง.</p>
+    <img src="test.jpg" alt="">
 
 </body>
 </html>
